<resources>
    <string name="app_name">Right On Q</string>

    <!-- tokens -->
    <string name="token_mapbox">pk.eyJ1IjoiZGlvbm5lLW9uZyIsImEiOiJjamRhM2M5OTUzcWszMzNxZnp1cHdlcnY5In0.cxXGQlu5_HlRYbqZrMldaQ</string>

    <!-- Strings related to login -->
    <string name="prompt_name"> Full Name </string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password"> Confirm Password </string>
    <string name="prompt_number"> Phone Number </string>
    <string name="action_register"> Sign Up </string>
    <string name="action_back_login"> Back To Log In </string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="placeholder_logo">placeholder logo</string>

    <string name="prompt_title"> Job Title </string>
    <string name="prompt_price"> Price </string>
    <string name="prompt_location"> Location </string>
    <string name="prompt_description"> Job Description </string>
    <string name="prompt_type"> Location </string>
    <string name="prompt_category"> Categories </string>
    <string name="prompt_accept_listing">Accept Listing</string>
    <string name="prompt_cancel">Cancel</string>
    <string name="placeholder_category"><![CDATA[<Insert Category>]]></string>
    <string name="text_category">Category:</string>

    <string-array name="category_arrays">
        <item>Reservation</item>
        <item>Appointment</item>
        <item>Others</item>
    </string-array>
</resources>
