<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.v1.inovate.rightonq_v1.SignupActivity">

    <LinearLayout
        android:id="@+id/activity_edit_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:srcCompat="@mipmap/q_logo"
                android:layout_centerInParent="true"
                android:contentDescription="@string/placeholder_logo"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/editcontent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:contentDescription="@string/prompt_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:src="@drawable/ic_person_black_24dp"
                    android:tint="@color/textSecondaryColor" />


                <EditText
                    android:id="@+id/tv_content_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/prompt_name"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:contentDescription="@string/prompt_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:src="@drawable/ic_email_black_24px"
                    android:tint="@color/textSecondaryColor" />


                <EditText
                    android:id="@+id/tv_content_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/prompt_email"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:contentDescription="@string/prompt_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:src="@drawable/ic_call_black_24dp"
                    android:tint="@color/textSecondaryColor" />

                <EditText
                    android:id="@string/prompt_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_number"
                    android:inputType="phone"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:contentDescription="@string/prompt_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:src="@drawable/ic_lock_black_24px"
                    android:tint="@color/textSecondaryColor" />


                <EditText
                    android:id="@+id/tv_content_pw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:contentDescription="@string/prompt_confirm_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:src="@drawable/ic_lock_outline_black_24px"
                    android:tint="@color/textSecondaryColor" />


                <EditText
                    android:id="@+id/tv_content_confirm_pw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_confirm_password"
                    android:inputType="textPassword"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/action_register"
                android:textColor="@color/textMainColor" />

            <Button style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_back_login"
                android:padding="0dp"
                android:layout_margin="0dp"
                />

        </LinearLayout>



    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
</android.support.constraint.ConstraintLayout>
